# EdgeDetection

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  edge_detection.c  out  readImage.c
src/: convolve.c  convolve.h  emboss.c  emboss.h  kernels.c  kernels.h  main.c  main.cpp  parallel.c  sequential.c  sobel.c  sobel.h  task.h  threadArgs.h
src/include/: convolve.h  image.h  kernels.h  mpi_handler.h  sobel.h  threadArgs.h
